[tool.poetry]
name = "freeauth"
version = "0.1.0"
description = ""
authors = ["DecentFoX Studio <service@decentfox.com>"]
readme = "README.md"
packages = [{ include = "freeauth", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
edgedb = "^1.3.0"
pydantic = {extras = ["dotenv"], version = "^1.10.8"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
pre-commit = "^3.2.2"
pytest-mock = "^3.10.0"
faker = "^18.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
atomic = true
line_length = 79
extend_skip_glob = ["*_edgeql.py"]

[tool.black]
line_length = 79
preview = true
extend-exclude = "_edgeql\\.py$"

[tool.mypy]
allow_redefinition = true
pretty = true
explicit_package_bases = true
mypy_path = "src"
exclude = [".*_edgeql.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -x -s --ff --cov-report=term-missing:skip-covered --cov=src/freeauth/conf --cov=src/freeauth/db"
testpaths = [
    "tests",
]

[tool.poetry.scripts]
freeauth-db = "freeauth.db.cli:main"
