[tool.poetry]
name = "freeauth"
version = "1.0.0"
description = "Python Authentication and RBAC Solution."
authors = ["DecentFoX Studio <service@decentfox.com>"]
readme = "README.md"
license = "Mulan PSL v2"
homepage = "https://freeauth.decentfox.com/"
repository = "https://github.com/decentfox/freeauth-api"
classifiers = [
    "License :: OSI Approved :: Mulan Permissive Software License v2 (MulanPSL-2.0)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    'Operating System :: MacOS',
]
packages = [{ include = "freeauth", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
edgedb = "^1.6.0"
pydantic = {extras = ["dotenv"], version = "^1.10.8"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
typer = {extras = ["all"], version = "^0.9.0"}

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.2.0"
pytest = "^7.3.0"
pytest-cov = "^4.0.0"
pytest-asyncio = "^0.21.0"
pre-commit = "^3.2.2"
pytest-mock = "^3.10.0"
faker = "^18.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
atomic = true
line_length = 79
extend_skip_glob = ["*_edgeql.py"]

[tool.black]
line_length = 79
preview = true
extend-exclude = "_edgeql\\.py$"

[tool.mypy]
allow_redefinition = true
pretty = true
explicit_package_bases = true
mypy_path = "src"
exclude = [".*_edgeql.py"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
addopts = "-ra -x -s --ff --cov-report=term-missing:skip-covered --cov=src/freeauth/conf --cov=src/freeauth/db  --cov=src/freeauth/security"
testpaths = [
    "tests",
]

[tool.poetry.scripts]
freeauth-db = "freeauth.db.cli:app"
