[tool.poetry]
name = "freeauth-fastapi-example"
version = "1.0.0"
description = "The package of FreeAuth example code."
authors = ["DecentFoX Studio <service@decentfox.com>"]
readme = "README.md"
license = "Mulan PSL v2"
homepage = "https://freeauth.decentfox.com/"
repository = "https://github.com/decentfox/freeauth-api"
classifiers = [
    "License :: OSI Approved :: Mulan Permissive Software License v2 (MulanPSL-2.0)",
    "Programming Language :: Python :: 3",
    "Operating System :: POSIX :: Linux",
    'Operating System :: MacOS',
]
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9,<4.0"
freeauth-fastapi-ext = {path = "../../freeauth-ext/fastapi-ext", develop = true}
uvicorn = "^0.22.0"

[tool.poetry.group.dev.dependencies]
black = "^23.7.0"
flake8 = "^6.0.0"
isort = "^5.12.0"
mypy = "^1.4.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
atomic = true
line_length = 79
extend_skip_glob = ["*_edgeql.py"]
known_third_party = ["fastapi"]

[tool.black]
line_length = 79
preview = true
extend-exclude = "_edgeql\\.py$"

[tool.mypy]
pretty = true
exclude = [".*_edgeql.py"]
